# automagik-tools

./: .dockerignore  .env.bak  .env.example  .gitguardian.yaml  .gitignore  .mcp.json.backup  .mcp.json.example  AUTOMAGIK_ENV_UNIFICATION.md  AUTO_BROWSER_OPENING.md  CHANGELOG-automagik_workflows.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDENTIALS_SETUP_GUIDE.md  FINALREPORT.md  GENIE_GPT41_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MCP_CONFIGURATION.md  MCP_CONFIG_EXAMPLES.md  Makefile  OAUTH_PORT_FIX_GUIDE.md  ORCHESTRATOR_AUTOMAGIK_WORKFLOWS_V2_PLAN.md  PM2_SETUP.md  README.md  SPARK_API_ANALYSIS.md  SQUEAKY_CLEAN_STATE.md  TESTING.md  TOOL_INVENTORY.md  TOOL_VERIFICATION_REPORT.md  WAKE_UP_SUMMARY.md  WORKOS_BRANDING_CONTENT_REVISED.md  WORKOS_BRANDING_GUIDE.md  ZERO_CONFIG_IMPLEMENTATION.md  alembic.ini  automagik-tools.service  check_all_tools.sh  claude-desktop-genie-config.json  claude-desktop-genie-stdio.json  clear-cache.sh  commit_and_push.sh  (+27 more)
.githooks/: pre-commit
.github/: labels.yml  pull_request_template.md
alembic/: env.py
automagik_tools/: cli.py  hub.py  hub_http.py
deploy/: README.md  aws-apprunner.example.yaml  aws-ecs-task-definition.example.json  gcloud-cloudrun.example.yaml  kubernetes-deployment.example.yaml  railway.example.toml  render.example.yaml
docs/: CONFIGURATION.md  DATABASE_FIRST_MIGRATION.md  DEPLOYMENT_GUIDE.md  FASTMCP_COMPLIANCE.md  GOOGLE_WORKSPACE_QA_REPORT.md  HUB_MULTITENANT_IMPLEMENTATION_PLAN.md  HUB_MULTI_TENANT_PLAN.md  MESSAGING_TOOLS_GUIDE.md  MULTI_TENANT_ARCHITECTURE.md  MULTI_TENANT_STATUS.md  OAUTH_GUIDE.md  OAUTH_UX_ENHANCEMENTS.md  TOOL_CREATION_GUIDE.md  TOOL_DEVELOPMENT_GUIDE.md  WORKOS_AUTHKIT_SETUP.md  WORKOS_RBAC_DESIGN.md  ai-processing-guide.md  gpt-4.1-prompt-improvements.md  spark-tool-analysis.md
examples/: automagik-hive-agent-example.md  automagik-workflows-cursor-config.json  dynamic-openapi-example.md  evolution-api-whatsapp-bot-example.md  gemini-assistant-code-example.md  genie-mcp-example.json  genie-orchestrator-example.md  json-to-google-docs-example.md  mcp-config-automagik-workflows.json  omni-multichannel-messaging-example.md  openapi-ai-processing-example.md  spark-workflow-automation-example.md
scripts/: create_tool.py  create_tool_from_openapi.py  create_tool_from_openapi_v2.py  deploy.sh  deploy_docker.py  deploy_http_dev.sh  deploy_sse_dev.sh  dev_runner.sh  (+17 more)
(+392 files in other folders)
